--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.4.3",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-mocha": "^5.0.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.0.0",
     "eslint-cli": "^1.0.0",
     "eslint-config-rackt": "^1.1.1",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-mocha": "^5.0.0",
     "mocha": "^5.0.0",
     "rimraf": "^2.5.0",
     "should": "^13.0.0",
@@ -165,6 +165,26 @@
     }
   },
   "dependencies": {
-    "babel-runtime": "^6.3.19"
+    "babel-runtime": "^6.3.19",
+    "require-dir": "^1.0.0",
+    "aguid": "^2.0.0",
+    "camelcase": "^5.0.0",
+    "camelcase-keys": "^4.2.0",
+    "capitalize": "^1.0.0",
+    "fahrenheit-to-celsius": "^1.0.0",
+    "is-phone": "^2.0.0",
+    "is-sea": "^0.3.1",
+    "lodash": "^4.17.4",
+    "moment-timezone": "^0.5.17",
+    "mph-to-kmh": "^1.0.0",
+    "numeral": "^2.0.6",
+    "phone-formatter": "0.0.2",
+    "polyline": "^0.2.0",
+    "require-dir": "^1.0.0",
+    "simplify-geojson": "^1.0.3",
+    "superagent": "^3.5.2",
+    "turf": "^3.0.14",
+    "validator": "^10.2.0",
+    "wkx": "^0.4.5"
   }
 }
