--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vandelay-util",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Grab bag of utilities for vandelay transform functions",
   "main": "dist/index.js",
   "keywords": [],
@@ -39,8 +39,7 @@
     "eslint-plugin-mocha": "^5.0.0",
     "mocha": "^5.0.0",
     "rimraf": "^2.5.0",
-    "should": "^13.0.0",
-    "tempfile": "^2.0.0"
+    "should": "^13.0.0"
   },
   "babel": {
     "plugins": [
@@ -165,9 +164,9 @@
     }
   },
   "dependencies": {
-    "babel-runtime": "^6.3.19",
-    "require-dir": "^1.0.0",
+    "@turf/turf": "^5.1.6",
     "aguid": "^2.0.0",
+    "babel-runtime": "^6.3.19",
     "camelcase": "^5.0.0",
     "camelcase-keys": "^4.2.0",
     "capitalize": "^1.0.0",
@@ -183,7 +182,6 @@
     "require-dir": "^1.0.0",
     "simplify-geojson": "^1.0.3",
     "superagent": "^3.5.2",
-    "turf": "^3.0.14",
     "validator": "^10.2.0",
     "wkx": "^0.4.5"
   }
