--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vandelay-util",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Grab bag of utilities for vandelay transform functions",
   "main": "dist/index.js",
   "keywords": [],
@@ -164,6 +164,7 @@
     }
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.0.0",
     "@turf/turf": "^5.1.6",
     "aguid": "^2.0.0",
     "babel-runtime": "^6.3.19",
@@ -178,7 +179,6 @@
     "mph-to-kmh": "^1.0.0",
     "numeral": "^2.0.6",
     "phone-formatter": "0.0.2",
-    "polyline": "^0.2.0",
     "require-dir": "^1.0.0",
     "simplify-geojson": "^1.0.3",
     "superagent": "^3.5.2",
