--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vandelay-util",
-  "version": "0.1.5",
+  "version": "1.0.0",
   "description": "Grab bag of utilities for vandelay transform functions",
   "main": "dist/index.js",
   "keywords": [],
@@ -181,6 +181,7 @@
     "phone-formatter": "0.0.2",
     "require-dir": "^1.0.0",
     "simplify-geojson": "^1.0.3",
+    "slugify": "^1.3.1",
     "superagent": "^3.5.2",
     "validator": "^10.2.0",
     "wkx": "^0.4.5"
