--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vandelay-util",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Grab bag of utilities for vandelay transform functions",
   "main": "dist/index.js",
   "keywords": [],
@@ -165,6 +165,7 @@
   },
   "dependencies": {
     "@mapbox/polyline": "^1.0.0",
+    "@sindresorhus/slugify": "^0.4.0",
     "@turf/turf": "^5.1.6",
     "aguid": "^2.0.0",
     "babel-runtime": "^6.3.19",
@@ -181,7 +182,6 @@
     "phone-formatter": "0.0.2",
     "require-dir": "^1.0.0",
     "simplify-geojson": "^1.0.3",
-    "slugify": "^1.3.1",
     "superagent": "^3.5.2",
     "validator": "^10.2.0",
     "wkx": "^0.4.5"
