--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vandelay-util",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "description": "Grab bag of utilities for vandelay transform functions",
   "main": "dist/index.js",
   "keywords": [],
@@ -169,8 +169,6 @@
     "@turf/turf": "^5.1.6",
     "aguid": "^2.0.0",
     "babel-runtime": "^6.3.19",
-    "camelcase": "^5.0.0",
-    "camelcase-keys": "^5.0.0",
     "capitalize": "^2.0.0",
     "fahrenheit-to-celsius": "^1.0.0",
     "is-phone": "^2.0.0",
@@ -179,7 +177,8 @@
     "moment-timezone": "^0.5.17",
     "mph-to-kmh": "^1.0.0",
     "numeral": "^2.0.6",
-    "phone-formatter": "0.0.2",
+    "phone": "^2.2.0",
+    "quick-lru": "^1.1.0",
     "require-dir": "^1.0.0",
     "simplify-geojson": "^1.0.3",
     "superagent": "^3.5.2",
