new conversion system

--- a/package.json
+++ b/package.json
@@ -170,12 +170,10 @@
     "aguid": "^2.0.0",
     "babel-runtime": "^6.3.19",
     "capitalize": "^2.0.0",
-    "fahrenheit-to-celsius": "^1.0.0",
-    "is-phone": "^2.0.0",
+    "convert-units": "^2.3.4",
     "is-sea": "^0.3.1",
     "lodash": "^4.17.4",
     "moment-timezone": "^0.5.17",
-    "mph-to-kmh": "^1.0.0",
     "numeral": "^2.0.6",
     "phone": "^2.2.0",
     "quick-lru": "^1.1.0",
