--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "preversion": "npm run clean && npm run build",
     "build": "babel src --out-dir dist",
     "clean": "rimraf dist",
-    "lint": "eslint src",
+    "lint": "eslint src test",
+    "lint:fix": "eslint src test --fix",
     "test": "npm run-script lint && mocha --require babel-register --recursive --reporter spec"
   },
   "devDependencies": {
