--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-mocha": "^5.0.0",
     "mocha": "^5.0.0",
+    "rewire": "^4.0.1",
     "rimraf": "^2.5.0",
     "should": "^13.0.0"
   },
