--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
     "convert-units": "^2.3.4",
     "decamelize": "^2.0.0",
     "geo-tz": "^5.0.0",
+    "geojson-precision": "^1.0.0",
     "is-sea": "^0.3.1",
     "lodash": "^4.17.4",
     "moize": "^5.4.2",
