--- a/package.json
+++ b/package.json
@@ -180,6 +180,7 @@
     "geojson-precision": "^1.0.0",
     "is-sea": "^0.3.1",
     "lodash": "^4.17.4",
+    "mockserver": "^3.0.0",
     "moize": "^5.4.2",
     "moment-timezone": "^0.5.17",
     "numeral": "^2.0.6",
