--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint": "eslint src test",
     "lint:fix": "eslint src test --fix",
     "test": "mocha --require babel-register --recursive --reporter spec && npm run-script lint",
-    "test:debug": "mocha --inspect --require babel-register --recursive --reporter spec"
+    "test:debug": "mocha --inspect-brk=0.0.0.0 --require babel-register --recursive --reporter spec"
   },
   "devDependencies": {
     "babel-cli": "^6.4.0",
@@ -39,6 +39,8 @@
     "eslint-config-rackt": "^1.1.1",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-mocha": "^5.0.0",
+    "express": "^4.16.4",
+    "get-port": "^5.0.0",
     "mocha": "^5.0.0",
     "rewire": "^4.0.1",
     "rimraf": "^2.5.0",
