--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.4.3",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^6.0.0",
+    "eslint": "^6.8.0",
     "eslint-cli": "^1.0.0",
     "eslint-config-rackt": "^1.1.1",
     "eslint-plugin-babel": "^5.1.0",
@@ -182,7 +182,7 @@
     "decamelize": "^4.0.0",
     "geo-tz": "^5.0.0",
     "geojson-precision": "^1.0.0",
-    "is-sea": "^0.3.1",
+    "is-sea": "github:stevelacy/is-sea#sl/deps-1",
     "lodash": "^4.17.4",
     "moize": "^5.4.2",
     "moment-timezone": "^0.5.17",
