--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vandelay-util",
-  "version": "3.9.4",
+  "version": "3.9.5",
   "description": "Grab bag of utilities for vandelay transform functions",
   "main": "dist/index.js",
   "keywords": [],
@@ -192,7 +192,7 @@
     "require-dir": "^1.0.0",
     "simplify-geojson": "^1.0.3",
     "stae": "^2.1.0",
-    "superagent": "github:stevelacy/superagent#errors-1",
+    "superagent": "^5.0.0",
     "validator": "^13.0.0",
     "wkx": "^0.5.0"
   }
