--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vandelay-util",
-  "version": "3.11.0",
+  "version": "3.12.0",
   "description": "Grab bag of utilities for vandelay transform functions",
   "main": "dist/index.js",
   "keywords": [],
@@ -180,6 +180,7 @@
     "capitalize": "^2.0.0",
     "convert-units": "^2.3.4",
     "decamelize": "^4.0.0",
+    "gdal-next": "^2.0.0",
     "geo-tz": "^6.0.0",
     "geojson-precision": "^1.0.0",
     "is-sea": "github:stevelacy/is-sea#sl/deps-1",
@@ -191,7 +192,7 @@
     "require-dir": "^1.0.0",
     "simplify-geojson": "^1.0.3",
     "stae": "^2.1.0",
-    "superagent": "^5.0.0",
+    "superagent": "^6.0.0",
     "validator": "^13.0.0",
     "wkx": "^0.5.0"
   }
